# logger

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  tests.py  wsgi.py
src/: __init__.py  base_classes.py  config.py  routes.py
src/logger/: logger.py  models.py  views.py
src/posts/: models.py  views.py
src/templates/: index.html
src/user/: models.py  utils.py  views.py
